--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit BME680 Library@^2.0.1
 	adafruit/Adafruit SGP30 Sensor@^2.0.0
 	adafruit/Adafruit NeoPixel@^1.8.0
+	boschsensortec/BSEC Software Library@^1.6.1480
