--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,4 @@ lib_deps =
 	adafruit/Adafruit SGP30 Sensor@^2.0.0
 	adafruit/Adafruit NeoPixel@^1.8.0
 	adafruit/Adafruit BME280 Library@^2.2.2
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
