--- a/platformio.ini
+++ b/platformio.ini
@@ -33,3 +33,4 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.8.0
 	adafruit/Adafruit BME280 Library@^2.2.2
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+monitor_speed = 115200
