--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp32
+
 [env:micro]
 platform = atmelavr
 board = micro
@@ -15,6 +18,19 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.4.4
 	adafruit/Adafruit BusIO@^1.7.3
-	adafruit/Adafruit BME680 Library@^2.0.1
 	adafruit/Adafruit SGP30 Sensor@^2.0.0
 	adafruit/Adafruit NeoPixel@^1.8.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+
+[env:esp32]
+platform = espressif32
+board = featheresp32
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.4.4
+	adafruit/Adafruit BusIO@^1.7.3
+	adafruit/Adafruit SGP30 Sensor@^2.0.0
+	adafruit/Adafruit NeoPixel@^1.8.0
+	adafruit/Adafruit BME280 Library@^2.2.2
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+monitor_speed = 115200
