--- a/platformio.ini
+++ b/platformio.ini
@@ -33,4 +33,6 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.8.0
 	adafruit/Adafruit BME280 Library@^2.2.2
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	bblanchon/ArduinoJson@^6.19.4
+
 monitor_speed = 115200
