--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	adafruit/Adafruit SGP30 Sensor@^2.0.0
 	adafruit/Adafruit NeoPixel@^1.8.0
 	adafruit/Adafruit BME280 Library@^2.2.2
+	arduino-libraries/NTPClient@^3.2.1
 
 [env:esp32]
 platform = espressif32
@@ -34,5 +35,5 @@ lib_deps =
 	adafruit/Adafruit BME280 Library@^2.2.2
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.19.4
-
+	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
