--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.8.0
 	adafruit/Adafruit BME280 Library@^2.2.2
 	arduino-libraries/NTPClient@^3.2.1
+	adafruit/RTClib@^2.1.1
 
 [env:esp32]
 platform = espressif32
@@ -36,4 +37,5 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.19.4
 	arduino-libraries/NTPClient@^3.2.1
+	adafruit/RTClib@^2.1.1
 monitor_speed = 115200
