--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	adafruit/Adafruit BME280 Library@^2.2.2
 	arduino-libraries/NTPClient@^3.2.1
 	adafruit/RTClib@^2.1.1
+	paolop74/extEEPROM@^3.4.1
 
 [env:esp32]
 platform = espressif32
@@ -38,4 +39,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	arduino-libraries/NTPClient@^3.2.1
 	adafruit/RTClib@^2.1.1
+	paolop74/extEEPROM@^3.4.1
 monitor_speed = 115200
